--- a/exam.html
+++ b/exam.html
@@ -74,7 +74,7 @@
                 <p>Description of Course 4.</p>
             </article>
             <article class="course">
-                <h2>Course 5</h2>
+                <h2>Course 5s</h2>
                 <p>Description of Course 5.</p>
             </article>
             <article class="course">
